add IT test for startPage